--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Your Name</title>
+    <title>About - Shariq Ali</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="nav-container">
-            <h1>Your Name</h1>
+            <h1>Shariq Ali</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -25,7 +25,7 @@
                 <div class="about-card">
                     <h3>🎓 Education</h3>
                     <p>Software Engineering Student</p>
-                    <p>University Name, Expected Graduation: 2026</p>
+                    <p>Oklahoma City University, Expected Graduation: 2026</p>
                 </div>
                 <div class="about-card">
                     <h3>💻 Skills</h3>
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name. Deployed with GitHub Pages</p>
+        <p>&copy; 2025 Shariq Ali. Deployed with GitHub Pages</p>
         <p class="deploy-info">Last deployed: <span id="deploy-date">Check commit history</span></p>
     </footer>
 </body>
