--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Shariq Ali - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="nav-container">
-            <h1>Your Name</h1>
+            <h1>Shariq Ali</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name. Deployed with GitHub Pages</p>
+        <p>&copy; 2025 Shariq Ali. Deployed with GitHub Pages</p>
         <p class="deploy-info">Last deployed: <span id="deploy-date">Check commit history</span></p>
     </footer>
 </body>
